--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,36 +21,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
         with:
           version: 8
           run_install: false
 
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install --no-frozen-lockfile
+          pnpm store path
 
       - name: Build with Next.js
         run: pnpm build
-
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
